--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.dtr.glass",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
