--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "react-router-native": "^6.3.0"
+    "react-router-native": "^6.3.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-av": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
